--- a/thesis.tex
+++ b/thesis.tex
@@ -13,9 +13,9 @@
 ]{scrbook}
 
 \usepackage[utf8]{inputenc}
-\usepackage[ngerman]{babel}
+\usepackage[british]{babel}
 \usepackage{url}
-\usepackage[autostyle=true,german=quotes]{csquotes}
+\usepackage[autostyle=true,english=quotes]{csquotes}
 \usepackage[T1]{fontenc}
 \usepackage{pdfpages}
 \usepackage{textcomp}
