--- a/settings/listings.tex
+++ b/settings/listings.tex
@@ -2,7 +2,7 @@
 \usepackage[many]{tcolorbox}
 
 % name of listings in the toc
-\renewcommand\lstlistlistingname{Listingverzeichnis}
+\renewcommand\lstlistlistingname{Listing}
 
 % general settings for listing
 \lstset{
