--- a/settings/commands.tex
+++ b/settings/commands.tex
@@ -20,11 +20,18 @@
 \newcommand{\coverMemberCommittee}{@undefined} % new LaTeX variable name
 % > English
 \addto\captionsenglish{\renewcommand{\coverThesis}{Thesis to obtain the Master of Science Degree in}}
-\addto\captionsenglish{\renewcommand{\coverSupervisors}{Supervisors}}
+\addto\captionsenglish{\renewcommand{\coverSupervisors}{Supervisor(s)}}
 \addto\captionsenglish{\renewcommand{\coverExaminationCommittee}{Examination Committee}}
 \addto\captionsenglish{\renewcommand{\coverChairperson}{Chairperson}}
 \addto\captionsenglish{\renewcommand{\coverSupervisor}{Supervisor}}
 \addto\captionsenglish{\renewcommand{\coverMemberCommittee}{Member of the Committee}}
+% > French
+\addto\captionsfrench{\renewcommand{\coverThesis}{Th\`ese pour l'obtention du Maîtrise des Sciences en}}
+\addto\captionsfrench{\renewcommand{\coverSupervisors}{Directeur(s) de th\`ese}}
+\addto\captionsfrench{\renewcommand{\coverExaminationCommittee}{Jury}}
+\addto\captionsfrench{\renewcommand{\coverChairperson}{Pr\'esident}}
+\addto\captionsfrench{\renewcommand{\coverSupervisor}{Directeur de th\`ese}}
+\addto\captionsfrench{\renewcommand{\coverMemberCommittee}{Rapporteur}}
 % > Portuguese
 \addto\captionsportuguese{\renewcommand{\coverThesis}{Disserta\c{c}\~{a}o para obten\c{c}\~{a}o do Grau de Mestre em}}
 \addto\captionsportuguese{\renewcommand{\coverSupervisors}{Orientador(es)}}
