--- a/thesis.tex
+++ b/thesis.tex
@@ -13,13 +13,14 @@
 ]{scrbook}
 
 \usepackage[utf8]{inputenc}
-\usepackage[british]{babel}
+\usepackage[english]{babel}
 \usepackage{url}
-\usepackage[autostyle=true,english=quotes]{csquotes}
+\usepackage[style=english]{csquotes}
 \usepackage[T1]{fontenc}
 \usepackage{pdfpages}
 \usepackage{textcomp}
 \usepackage{amsmath} % math environment
+\usepackage{scrhack}
 
 % ---------------------------
 % |    Meta-Data for PDF    |
