--- a/settings/bibliography.tex
+++ b/settings/bibliography.tex
@@ -1,17 +1,4 @@
-\usepackage[
-    backend=biber, 
-    style=authoryear-icomp, % alphabetic
-    citestyle=authoryear-icomp, % alphabetic, authortitle
-    date=short,
-    % backref=true, % Display pages on which the reference is used
-    maxnames=1, % affects the cites
-    maxbibnames=3, % affects the bibliography
-    pagetracker=true,
-    isbn=false,    
-    % block=ragged, % break urls
-    % firstinits=true, % shorten first names
-    backrefstyle=three+ % Combine pages
-]{biblatex}
+\usepackage{biblatex}
 
 % Distance between bibliographical references
 \setlength{\bibitemsep}{.5em}
