--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -12,4 +12,29 @@
     keywords  = "armv8,cortex"
 }
 
+@online{a25,
+    author    = "Andes Technology",
+    title     = "AndesCore™ A25, Compact High-Speed 32-bit CPU for Real-time and Linux Applications",
+    url       = "http://www.andestech.com/tw/%E7%94%A2%E5%93%81%E8%88%87%E8%A7%A3%E6%B1%BA%E6%96%B9%E6%A1%88/andescore-processors/riscv-a25/",
+    keywords  = "a25,andes"
+}
+@online{ax25,
+    author    = "Andes Technology",
+    title     = "AndesCore™ AX25, Compact High-Speed 64-bit CPU for Real-time and Linux Applications",
+    url       = "http://www.andestech.com/tw/%E7%94%A2%E5%93%81%E8%88%87%E8%A7%A3%E6%B1%BA%E6%96%B9%E6%A1%88/andescore-processors/riscv-ax25/",
+    keywords  = "ax25,andes"
+}
+@online{ae350,
+    author    = "Andes Technology",
+    title     = "AE350 Platform",
+    url       = "http://www.andestech.com/en/products-solutions/andeshape-platforms/ae350-axi-based-platform-pre-integrated-with-n25f-nx25f-a25-ax25/",
+    keywords  = "ae350,andes"
+}
+@online{adp-xc7k160,
+    author    = "Andes Technology",
+    title     = "ADP-XC7K160/410, FPGA Based Development Platform",
+    url       = "http://www.andestech.com/en/products-solutions/andeshape-platforms/adp-xc7k160-410/",
+    keywords  = "ae350,andes"
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
