--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -34,7 +34,100 @@
     author    = "Andes Technology",
     title     = "ADP-XC7K160/410, FPGA Based Development Platform",
     url       = "http://www.andestech.com/en/products-solutions/andeshape-platforms/adp-xc7k160-410/",
-    keywords  = "ae350,andes"
+    keywords  = "adp-xc7k160/410,andes"
+}
+
+@online{u54-mc,
+    author    = "SiFive",
+    title     = "U54-MC",
+    url       = "https://www.sifive.com/cores/u54-mc",
+    keywords  = "U54-MC,sifive"
+}
+@online{u54,
+    author    = "SiFive",
+    title     = "U54",
+    url       = "https://www.sifive.com/cores/u54",
+    keywords  = "U54,sifive"
+}
+@online{hifive_unleashed,
+    author    = "SiFive",
+    title     = "HiFive Unleashed",
+    url       = "https://www.sifive.com/boards/hifive-unleashed",
+    keywords  = "HiFive Unleashed,sifive"
+}
+@online{u74-mc,
+    author    = "SiFive",
+    title     = "U74-MC",
+    url       = "https://www.sifive.com/cores/u74-mc",
+    keywords  = "U74-MC,sifive"
+}
+@online{u74,
+    author    = "SiFive",
+    title     = "U74",
+    url       = "https://www.sifive.com/cores/u74",
+    keywords  = "U74,sifive"
+}
+@online{hifive_unmatched,
+    author    = "SiFive",
+    title     = "HiFive Unmatched",
+    url       = "https://www.sifive.com/boards/hifive-unmatched",
+    keywords  = "HiFive Unmatched,sifive"
+}
+
+@online{beagleV,
+    author    = "BeagleBoard.org, Seeed Studio and StarFive",
+    title     = "BeagleV, The First Affordable RISC-V Computer Designed to Run Linux",
+    url       = "https://beagleboard.org/static/beagleV/beagleV.html",
+    keywords  = "BeagleV,BeagleBoard,Seeed Studio,StarFive"
+}
+
+@article{chipyard,
+  author={Amid, Alon and Biancolin, David and Gonzalez, Abraham and Grubb, Daniel and Karandikar, Sagar and Liew, Harrison and Magyar,   Albert and Mao, Howard and Ou, Albert and Pemberton, Nathan and Rigge, Paul and Schmidt, Colin and Wright, John and Zhao, Jerry and Shao, Yakun Sophia and Asanovi\'{c}, Krste and Nikoli\'{c}, Borivoje},
+  journal={IEEE Micro},
+  title={Chipyard: Integrated Design, Simulation, and Implementation Framework for Custom SoCs},
+  year={2020},
+  volume={40},
+  number={4},
+  pages={10-21},
+  doi={10.1109/MM.2020.2996616},
+  ISSN={1937-4143},
+}
+@article{zhaosonicboom,
+  title={SonicBOOM: The 3rd Generation Berkeley Out-of-Order Machine},
+  author={Zhao, Jerry and Korpan, Ben and Gonzalez, Abraham and Asanovic, Krste},
+  booktitle={Fourth Workshop on Computer Architecture Research with RISC-V},
+  year={2020},
+  month={05}
+}
+
+@article{zaruba2019cost,
+   author={F. {Zaruba} and L. {Benini}},
+   journal={IEEE Transactions on Very Large Scale Integration (VLSI) Systems},
+   title={The Cost of Application-Class Processing: Energy and Performance Analysis of a Linux-Ready 1.7-GHz 64-Bit RISC-V Core in 22-nm FDSOI Technology},
+   year={2019},
+   volume={27},
+   number={11},
+   pages={2629-2640},
+   doi={10.1109/TVLSI.2019.2926114},
+   ISSN={1557-9999},
+   month={10},
+}
+@inproceedings{Balkind:2016:OOS:2872362.2872414,
+author = {Balkind, Jonathan and McKeown, Michael and Fu, Yaosheng and Nguyen, Tri and Zhou, Yanqi and Lavrov, Alexey and Shahrad, Mohammad and Fuchs, Adi and Payne, Samuel and Liang, Xiaohua and Matl, Matthew and Wentzlaff, David},
+title = {OpenPiton: An Open Source Manycore Research Framework},
+booktitle = {Proceedings of the Twenty-First International Conference on Architectural Support for Programming Languages and Operating Systems},
+series = {ASPLOS '16},
+year = {2016},
+isbn = {978-1-4503-4091-5},
+location = {Atlanta, Georgia, USA},
+pages = {217--232},
+numpages = {16},
+url = {http://doi.acm.org/10.1145/2872362.2872414},
+doi = {10.1145/2872362.2872414},
+acmid = {2872414},
+publisher = {ACM},
+address = {New York, NY, USA},
+keywords = {manycore, multicore, open-source},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
