--- a/thesis.tex
+++ b/thesis.tex
@@ -51,6 +51,7 @@
 \input{settings/links.tex}
 \input{settings/commands}
 \input{settings/bookmarks}
+\input{settings/glossaries.tex}
 
 \begin{document}
 
@@ -88,6 +89,7 @@
 \listoffigures
 \listoftables
 \lstlistoflistings 
+\printglossary[type=\acronymtype, title=Acronyms, toctitle=Acronyms, nonumberlist]
 
 % ------------------
 % |    Chapters    |
