Update Open-source solution section;

--- a/settings/glossaries.tex
+++ b/settings/glossaries.tex
@@ -13,3 +13,8 @@
 \newacronym{soc}{SoC}{System on a chip}
 \newacronym{plic}{PLIC}{Platform-Level Interrupt Controller}
 \newacronym{clint}{CLINT}{Core-local Interrupt Controller}
+\newacronym{isa}{ISA}{Instruction set architecture}
+\newacronym{machine}{M}{Machine}
+\newacronym{user}{U}{User}
+\newacronym{supervisor}{S}{Supervisor}
+\newacronym{csr}{CSR}{Control and status register}
