--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -81,6 +81,35 @@
     keywords  = "BeagleV,BeagleBoard,Seeed Studio,StarFive"
 }
 
+@online{neorv32,
+    author    = "stnolting",
+    title     = "The NEORV32 RISC-V Processor",
+    url       = "https://github.com/stnolting/neorv32",
+    keywords  = "neorv32,risc"
+}
+
+@online{darkriscv,
+    author    = "darklife",
+    title     = "DarkRISCV",
+    url       = "https://github.com/darklife/darkriscv",
+    keywords  = "darkriscv,risc"
+}
+
+@online{ibex,
+    author    = "lowRISC",
+    title     = "Ibex RISC-V Core",
+    url       = "https://github.com/lowRISC/ibex",
+    keywords  = "darkriscv,risc"
+}
+
+@online{picorv32,
+    author    = "YosysHQ",
+    title     = "PicoRV32 - A Size-Optimized RISC-V CPU",
+    year      = "2015",
+    url       = "https://github.com/YosysHQ/picorv32",
+    keywords  = "picorv32,risc"
+}
+
 @article{chipyard,
   author={Amid, Alon and Biancolin, David and Gonzalez, Abraham and Grubb, Daniel and Karandikar, Sagar and Liew, Harrison and Magyar,   Albert and Mao, Howard and Ou, Albert and Pemberton, Nathan and Rigge, Paul and Schmidt, Colin and Wright, John and Zhao, Jerry and Shao, Yakun Sophia and Asanovi\'{c}, Krste and Nikoli\'{c}, Borivoje},
   journal={IEEE Micro},
@@ -130,4 +159,10 @@ address = {New York, NY, USA},
 keywords = {manycore, multicore, open-source},
 }
 
+@online{vexriscv,
+	author    = "SpinalHDL",
+	title     = "VexRiscv",
+    url       = "https://github.com/SpinalHDL/VexRiscv",
+    keywords  = "vexriscv,risc"
+}
 @Comment{jabref-meta: databaseType:biblatex;}
