--- a/settings/glossaries.tex
+++ b/settings/glossaries.tex
@@ -18,3 +18,4 @@
 \newacronym{user}{U}{User}
 \newacronym{supervisor}{S}{Supervisor}
 \newacronym{csr}{CSR}{Control and status register}
+\newacronym{ooo}{OoO}{Out-of-Order}
