--- a/settings/glossaries.tex
+++ b/settings/glossaries.tex
@@ -19,3 +19,5 @@
 \newacronym{supervisor}{S}{Supervisor}
 \newacronym{csr}{CSR}{Control and status register}
 \newacronym{ooo}{OoO}{Out-of-Order}
+\newacronym{os}{OS}{Operating system}
+\newacronym{hdl}{HDL}{Hardware Description Language}
