--- a/settings/glossaries.tex
+++ b/settings/glossaries.tex
@@ -21,3 +21,4 @@
 \newacronym{ooo}{OoO}{Out-of-Order}
 \newacronym{os}{OS}{Operating system}
 \newacronym{hdl}{HDL}{Hardware Description Language}
+\newacronym{mmu}{MMU}{Memory Management Unit}
