Done: BOOM subsection;

--- a/settings/glossaries.tex
+++ b/settings/glossaries.tex
@@ -22,3 +22,4 @@
 \newacronym{os}{OS}{Operating system}
 \newacronym{hdl}{HDL}{Hardware Description Language}
 \newacronym{mmu}{MMU}{Memory Management Unit}
+\newacronym{chisel}{Chisel}{Constructing Hardware in a Scala Embedded Language}
