--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -158,6 +158,27 @@ publisher = {ACM},
 address = {New York, NY, USA},
 keywords = {manycore, multicore, open-source},
 }
+@inproceedings{bachrach2012chisel,
+  title={Chisel: constructing hardware in a scala embedded language},
+  author={Bachrach, Jonathan and Vo, Huy and Richards, Brian and Lee, Yunsup and Waterman, Andrew and Avi{\v{z}}ienis, Rimas and Wawrzynek, John and Asanovi{\'c}, Krste},
+  booktitle={DAC Design automation conference 2012},
+  pages={1212--1221},
+  year={2012},
+  organization={IEEE}
+}
+@misc{odersky2004scala,
+  title={The Scala language specification},
+  author={Odersky, Martin and Altherr, Philippe and Cremet, Vincent and Emir, Burak and Micheloud, Stphane and Mihaylov, Nikolay and Schinz, Michel and Stenman, Erik and Zenger, Matthias},
+  year={2004},
+  publisher={Citeseer}
+}
+@article{asanovic2016rocket,
+  title={The rocket chip generator},
+  author={Asanovic, Krste and Avizienis, Rimas and Bachrach, Jonathan and Beamer, Scott and Biancolin, David and Celio, Christopher and Cook, Henry and Dabbelt, Daniel and Hauser, John and Izraelevitz, Adam and others},
+  journal={EECS Department, University of California, Berkeley, Tech. Rep. UCB/EECS-2016-17},
+  volume={4},
+  year={2016}
+}
 
 @online{vexriscv,
 	author    = "SpinalHDL",
@@ -165,4 +186,12 @@ keywords = {manycore, multicore, open-source},
     url       = "https://github.com/SpinalHDL/VexRiscv",
     keywords  = "vexriscv,risc"
 }
+@inproceedings{papon2017spinalhdl,
+  title={SpinalHDL: An alternative hardware description language},
+  author={Papon, C},
+  booktitle={FOSDEM},
+  year={2017}
+}
+
+
 @Comment{jabref-meta: databaseType:biblatex;}
