--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -181,7 +181,7 @@ keywords = {manycore, multicore, open-source},
 }
 
 @online{vexriscv,
-	author    = "SpinalHDL",
+	author    = "Papon, C",
 	title     = "VexRiscv",
     url       = "https://github.com/SpinalHDL/VexRiscv",
     keywords  = "vexriscv,risc"
@@ -192,6 +192,20 @@ keywords = {manycore, multicore, open-source},
   booktitle={FOSDEM},
   year={2017}
 }
+@online{litex_vexriscv,
+	author    = " LiteX",
+	title     = "linux-on-litex-vexriscv",
+    url       = "https://github.com/litex-hub/linux-on-litex-vexriscv",
+    keywords  = "vexriscv,risc"
+}
+@article{bourdeauducq2012migen,
+  title={Migen Manual},
+  author={Bourdeauducq, Sebastien},
+  journal={Release 0. X},
+  volume={32},
+  year={2012}
+}
+
 
 
 @Comment{jabref-meta: databaseType:biblatex;}
