--- a/settings/glossaries.tex
+++ b/settings/glossaries.tex
@@ -19,7 +19,10 @@
 \newacronym{supervisor}{S}{Supervisor}
 \newacronym{csr}{CSR}{Control and status register}
 \newacronym{ooo}{OoO}{Out-of-Order}
-\newacronym{os}{OS}{Operating system}
+\newacronym{os}{OS}{Operating System}
 \newacronym{hdl}{HDL}{Hardware Description Language}
 \newacronym{mmu}{MMU}{Memory Management Unit}
 \newacronym{chisel}{Chisel}{Constructing Hardware in a Scala Embedded Language}
+\newacronym{rtl}{RTL}{register-transfer level}
+\newacronym{fpga}{FPGA}{Field-programmable gate array}
+\newacronym{asic}{ASIC}{Application-Specific Integrated Circuit}
