--- a/settings/glossaries.tex
+++ b/settings/glossaries.tex
@@ -26,3 +26,5 @@
 \newacronym{rtl}{RTL}{register-transfer level}
 \newacronym{fpga}{FPGA}{Field-programmable gate array}
 \newacronym{asic}{ASIC}{Application-Specific Integrated Circuit}
+\newacronym{uut}{UUT}{Unit Under Test}
+\newacronym{uart}{UART}{Universal asynchronous receiver/transmitter}
