Done HW Develop intro;

--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -207,5 +207,14 @@ keywords = {manycore, multicore, open-source},
 }
 
 
+@article{gorban2002uart,
+  title={Uart ip core specification},
+  author={Gorban, Jacob},
+  journal={Architecture},
+  volume={15},
+  pages={1},
+  year={2002}
+}
+
 
 @Comment{jabref-meta: databaseType:biblatex;}
