--- a/settings/listings.tex
+++ b/settings/listings.tex
@@ -1,76 +1,51 @@
 \usepackage{listings}
 \usepackage[many]{tcolorbox}
 
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
 % name of listings in the toc
 \renewcommand\lstlistlistingname{Code Listing}
 
-% general settings for listing
-\lstset{
-    xleftmargin=1.1cm,
-    belowskip=2em,
-    basicstyle=\fontsize{10}{15}\ttfamily,
-    basewidth  = {.5em,0.4em},
-    captionpos=t,
-    lineskip={2pt},
-    backgroundcolor=\color{white},
-    framextopmargin=6pt,
-    framexrightmargin=0pt,
-    framexleftmargin=0.9em,    
-    framexbottommargin=6pt, 
-    frame=l,
-%    frame=single,        
-%    frame=tb, framerule=0pt,    
-    framesep=6.5mm,
-    fillcolor=\color{white},
-    rulecolor=\color{middlegray},
-    numbers=left,
-    numberstyle=\normalfont\color{middlegray},
-%    numberstyle=\footnotesize,    
-    numbersep=10pt,
-    abovecaptionskip=10pt, %space above the caption
-    belowcaptionskip=10pt, %space below the caption
-    extendedchars=true,
+\lstdefinestyle{mystyle}{
+    backgroundcolor=\color{backcolour},   
+    commentstyle=\color{codegreen},
+    keywordstyle=\color{magenta},
+    numberstyle=\tiny\color{codegray},
+    stringstyle=\color{codepurple},
+    basicstyle=\ttfamily\footnotesize,
+    breakatwhitespace=false,         
+    breaklines=true,                 
+    captionpos=b,                    
+    keepspaces=true,                 
+    numbers=left,                    
+    numbersep=10pt,                  
+    showspaces=false,                
     showstringspaces=false,
-    showspaces=false,
-    stepnumber=1, % the step between two line-numbers. If it is 1 each line will be numbered
-    tabsize=2,
-    breaklines=true,
-    showtabs=false,
-    upquote=true
+    showtabs=false,                  
+    tabsize=2
 }
 
-% define language
-\lstdefinelanguage{JavaScript}{
-  keywords={typeof, new, true, false, catch, then, function, return, null, catch, switch, var, if, in, while, do, else, case, break, default},
-  keywordstyle=\color{editorGreen}\bfseries,
-  ndkeywords={class, export, boolean, throw, implements, import, this, const},
-  ndkeywordstyle=\color{vscodeblue}\bfseries,
-  identifierstyle=\color{black},
-  sensitive=false,
-  comment=[l]{//},
-  morecomment=[s]{/*}{*/},
-  commentstyle=\color{editorGreen}\ttfamily,
-  stringstyle=\color{darkred}\ttfamily,
-  morestring=[b]',
-  morestring=[b]"
-}
+% general settings for listing
+\lstset{style = mystyle}
 
-\lstdefinelanguage{C}{
-  belowcaptionskip=1\baselineskip,
-  captionpos=b,
-  numbers=left,
-  numbersep=5pt,
-  breaklines=true,
-  frame=single,
-  xleftmargin=\parindent,
-  language=C,
-  showstringspaces=false,
-  basicstyle=\ttfamily,
-  keywordstyle=\bfseries\color{green!40!black},
-  commentstyle=\color{purple!40!black},
-  identifierstyle=\color{blue},
-  stringstyle=\color{orange}
-}
+% define custom language
+%\lstdefinelanguage{JavaScript}{
+%  keywords={typeof, new, true, false, catch, then, function, return, null, catch, switch, var, if, in, while, do, else, case, break, default},
+%  keywordstyle=\color{editorGreen}\bfseries,
+%  ndkeywords={class, export, boolean, throw, implements, import, this, const},
+%  ndkeywordstyle=\color{vscodeblue}\bfseries,
+%  identifierstyle=\color{black},
+%  sensitive=false,
+%  comment=[l]{//},
+%  morecomment=[s]{/*}{*/},
+%  commentstyle=\color{editorGreen}\ttfamily,
+%  stringstyle=\color{darkred}\ttfamily,
+%  morestring=[b]',
+%  morestring=[b]"
+%}
 
 %Usage
 %\begin{minipage}{\linewidth}
