better glossaries settings;

--- a/settings/glossaries.tex
+++ b/settings/glossaries.tex
@@ -2,13 +2,14 @@
 
 \makeglossaries
 
-% Example
+\input{sources/acronyms.tex}
+
+% Examples:
+%
 % \newglossaryentry{maths}
 % {
 %         name=mathematics,
 %         description={Mathematics is what mathematicians do}
 % }
-
+%
 % \newacronym{cpu}{CPU}{Central Processing Unit}
-
-\input{sources/acronyms.tex}
