VexRiscV most of section;

--- a/sources/acronyms.tex
+++ b/sources/acronyms.tex
@@ -20,3 +20,9 @@
 \newacronym{msb}{msb}{Most Significant bit}
 \newacronym{demux}{DEMUX}{desmultiplexer}
 \newacronym{mux}{MUX}{multiplexer}
+\newacronym{lr}{LR}{Load-Reserved}
+\newacronym{sc}{SC}{Store-Conditional}
+\newacronym{amo}{AMO}{Atomic Memory Operations}
+\newacronym{pc}{PC}{Program counter}
+\newacronym{fpu}{FPU}{floating-point unit}
+\newacronym{alu}{ALU}{arithmetic logic unit}
