a little bit more of UART;

--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -206,7 +206,12 @@ keywords = {manycore, multicore, open-source},
   year={2012}
 }
 
-
+@online{riscv_platform_specification,
+	author    = "riscv",
+	title     = "RISC-V Platform Specification",
+    url       = "https://github.com/riscv/riscv-platform-specs/blob/main/riscv-platform-spec.pdf",
+    keywords  = "risc-v"
+}
 @article{gorban2002uart,
   title={Uart ip core specification},
   author={Gorban, Jacob},
