Add: words in CH3;

--- a/sources/acronyms.tex
+++ b/sources/acronyms.tex
@@ -26,3 +26,4 @@
 \newacronym{pc}{PC}{Program counter}
 \newacronym{fpu}{FPU}{floating-point unit}
 \newacronym{alu}{ALU}{arithmetic logic unit}
+%\newacronym{gpio}{GPIO}{General Purpose Input/Output}
