--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -221,5 +221,23 @@ keywords = {manycore, multicore, open-source},
   year={2002}
 }
 
+@online{lowrisc_plic,
+	author    = "lowRISC",
+	title     = "OpenTitan - PLIC",
+    url       = "https://github.com/lowRISC/opentitan/tree/master/hw/ip_templates/rv_plic",
+    keywords  = "lowrisc,plic"
+}
+@online{pulp_plic,
+	author    = "pulp-platform",
+	title     = "RISC-V Platform-Level Interrupt Controller",
+    url       = "https://github.com/pulp-platform/rv_plic/tree/master",
+    keywords  = "pulp,plic"
+}
+@online{roalogic_plic,
+	author    = "RoaLogic",
+	title     = "AHB-Lite Platform-Level Interrupt Controller (PLIC)",
+    url       = "https://github.com/RoaLogic/plic",
+    keywords  = "roalogic,plic"
+}
 
 @Comment{jabref-meta: databaseType:biblatex;}
