Done: UART16550 section;

--- a/sources/acronyms.tex
+++ b/sources/acronyms.tex
@@ -18,6 +18,7 @@
 \newacronym{uut}{UUT}{Unit Under Test}
 \newacronym{uart}{UART}{Universal asynchronous receiver/transmitter}
 \newacronym{msb}{msb}{Most Significant bit}
+\newacronym{lsb}{lsb}{Less Significant bit}
 \newacronym{demux}{DEMUX}{desmultiplexer}
 \newacronym{mux}{MUX}{multiplexer}
 \newacronym{lr}{LR}{Load-Reserved}
