--- a/sources/acronyms.tex
+++ b/sources/acronyms.tex
@@ -27,4 +27,5 @@
 \newacronym{pc}{PC}{Program counter}
 \newacronym{fpu}{FPU}{floating-point unit}
 \newacronym{alu}{ALU}{arithmetic logic unit}
+\newacronym{rtc}{rtc}{arithmetic logic unit}
 %\newacronym{gpio}{GPIO}{General Purpose Input/Output}
