--- a/sources/acronyms.tex
+++ b/sources/acronyms.tex
@@ -29,3 +29,10 @@
 \newacronym{alu}{ALU}{arithmetic logic unit}
 \newacronym{rtc}{rtc}{arithmetic logic unit}
 %\newacronym{gpio}{GPIO}{General Purpose Input/Output}
+
+%CH4
+\newacronym{eot}{EOT}{End of Transmission}
+\newacronym{enq}{ENQ}{Enquiry}
+\newacronym{ack}{ACK}{Acknowledgement}
+\newacronym{dc1}{DC1}{Device Control 1}
+\newacronym{ascii}{ASCII}{American Standard Code for Information Interchange}
