--- a/thesis.tex
+++ b/thesis.tex
@@ -89,7 +89,7 @@
 \listoffigures
 \listoftables
 \lstlistoflistings 
-\printglossary[type=\acronymtype, title=Acronyms, toctitle=Acronyms, nonumberlist]
+\printglossary[type=\acronymtype, title=List of Acronyms, nonumberlist]
 
 % ------------------
 % |    Chapters    |
