Introduction to IOb-SoC;

--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -5,6 +5,16 @@
 % References
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+%CH2
+@online{iob_soc_repo,
+	author    = "IObundle Lda",
+	title     = "IOb-SoC",
+	url       = "https://github.com/IObundle/iob-soc",
+	edition	  = "V0.6",
+    keywords  = "iob-soc,riscv"
+}
+
+%CH3
 @online{cortex_a72,
     author    = "Arm Holdings (arm)",
     title     = "The Cortex-A72 processor specifications",
@@ -206,6 +216,7 @@ keywords = {manycore, multicore, open-source},
   year={2012}
 }
 
+%CH4
 @online{riscv_platform_specification,
 	author    = "riscv",
 	title     = "RISC-V Platform Specification",
