--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -251,4 +251,11 @@ keywords = {manycore, multicore, open-source},
     keywords  = "roalogic,plic"
 }
 
+% CH4
+@online{bare_metal_int,
+	author    = "Five EmbedDev",
+	title     = "riscv-scratchpad - baremetal-startup-c",
+    url       = "https://github.com/five-embeddev/riscv-scratchpad/tree/master/baremetal-startup-c/src",
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
