--- a/sources/acronyms.tex
+++ b/sources/acronyms.tex
@@ -34,5 +34,9 @@
 \newacronym{eot}{EOT}{End of Transmission}
 \newacronym{enq}{ENQ}{Enquiry}
 \newacronym{ack}{ACK}{Acknowledgement}
+\newacronym{ftx}{FTX}{Receive a file request}
+\newacronym{frx}{FRX}{Send a file request}
 \newacronym{dc1}{DC1}{Device Control 1}
 \newacronym{ascii}{ASCII}{American Standard Code for Information Interchange}
+\newacronym{ddr}{DDR}{Double Data Rate}
+\newacronym{dram}{DRAM}{Dynamic Random Access Memory}
