--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -258,4 +258,9 @@ keywords = {manycore, multicore, open-source},
     url       = "https://github.com/five-embeddev/riscv-scratchpad/tree/master/baremetal-startup-c/src",
 }
 
+@online{busybox,
+	author  = "Denys Vlasenko",
+	title   = "BusyBox",
+	url     = "https://git.busybox.net/busybox"
+}
 @Comment{jabref-meta: databaseType:biblatex;}
