--- a/sources/acronyms.tex
+++ b/sources/acronyms.tex
@@ -40,6 +40,7 @@
 \newacronym{ascii}{ASCII}{American Standard Code for Information Interchange}
 \newacronym{ddr}{DDR}{Double Data Rate}
 \newacronym{dram}{DRAM}{Dynamic Random Access Memory}
+\newacronym{bram}{BRAM}{Block Random Access Memory}
 \newacronym{rootfs}{rootfs}{root file system}
 \newacronym{dtc}{DTC}{Device Tree Compiler}
 \newacronym{dts}{DTS}{Device Tree Source}
