WIP: CH2; Done: SEC2.1;

--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -6,13 +6,90 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %CH2
-@online{iob_soc_repo,
+@online{iob_soc,
 	author    = "IObundle Lda",
 	title     = "IOb-SoC",
 	url       = "https://github.com/IObundle/iob-soc",
 	edition	  = "V0.6",
     keywords  = "iob-soc,riscv"
 }
+@book{thomas2008verilog,
+  title={The Verilog{\textregistered} hardware description language},
+  author={Thomas, Donald and Moorby, Philip},
+  year={2008},
+  publisher={Springer Science \& Business Media}
+}
+@inproceedings{tidala2018high,
+  title={High performance network on chip using AXI4 protocol interface on an FPGA},
+  author={Tidala, Neethika},
+  booktitle={2018 second international conference on electronics, communication and aerospace technology (ICECA)},
+  pages={1647--1651},
+  year={2018},
+  organization={IEEE}
+}
+@online{iob_lib,
+    author    = "IObundle Lda",
+    title     = "IOb-Lib",
+    url       = "https://github.com/IObundle/iob-lib",
+    keywords  = "iob-soc,iob-lib"
+}
+@article{asanovic2014instruction,
+  title   ="Instruction sets should be free: The case for risc-v",
+  author  ="Asanovi{\'c}, Krste and Patterson, David A",
+  journal ="EECS Department, University of California, Berkeley, Tech. Rep. UCB/EECS-2014-146",
+  year    ="2014"
+}
+@article{riscv_priviledge,
+  title={The RISC-V instruction set manual volume II: Privileged architecture version 1.9},
+  author={Waterman, Andrew and Lee, Yunsup and Avizienis, Rimas and Patterson, David A and Asanovic, Krste},
+  journal={EECS Department, University of California, Berkeley, Tech. Rep. UCB/EECS-2016-129},
+  year={2016}
+}
+@article{riscv_unpriviledge,
+  title={The RISC-V instruction set manual},
+  author={Waterman, Andrew and Lee, Yunsup and Patterson, David and Asanovic, Krste and level Isa, Volume I User and Waterman, Andrew and Lee, Yunsup and Patterson, David},
+  journal={Volume I: User-Level ISA, version},
+  volume={2},
+  year={2014}
+}
+@misc{williams2006icarus,
+  title={Icarus verilog},
+  author={Williams, Stephen},
+  year={2006}
+}
+@article{snyder2010verilator,
+  title={Verilator: Fast, free, but for me?},
+  author={Snyder, Wilson},
+  journal={DVClub Presentation},
+  pages={11},
+  year={2010}
+}
+@inproceedings{bellard2005qemu,
+  title={QEMU, a fast and portable dynamic translator.},
+  author={Bellard, Fabrice},
+  booktitle={USENIX annual technical conference, FREENIX Track},
+  volume={41},
+  number={46},
+  pages={10--5555},
+  year={2005},
+  organization={Califor-nia, USA}
+}
+@misc{oracle2015virtualbox,
+  title={VirtualBox},
+  author={Oracle, VM},
+  year={2015}
+}
+@article{bugnion2012bringing,
+  title={Bringing virtualization to the x86 architecture with the original vmware workstation},
+  author={Bugnion, Edouard and Devine, Scott and Rosenblum, Mendel and Sugerman, Jeremy and Wang, Edward Y},
+  journal={ACM Transactions on Computer Systems (TOCS)},
+  volume={30},
+  number={4},
+  pages={1--51},
+  year={2012},
+  publisher={ACM New York, NY, USA}
+}
+
 
 %CH3
 @online{cortex_a72,
