--- a/sources/acronyms.tex
+++ b/sources/acronyms.tex
@@ -1,3 +1,19 @@
+%CH2
+\newacronym{MSB}{MSB}{Most Significant Byte}
+\newacronym{LSB}{LSB}{Less Significant Byte}
+\newacronym{rbr}{RBR}{Receiver Buffer Register}
+\newacronym{thr}{THR}{Transmitter Holding Register}
+\newacronym{ier}{IER}{Interrupt Enable Register}
+\newacronym{iir}{IIR}{Interrupt Identification Register}
+\newacronym{fcr}{FCR}{FIFO Control Register}
+\newacronym{lcr}{LCR}{Line Control Register}
+\newacronym{mcr}{MCR}{Modem Control Register}
+\newacronym{lsr}{LSR}{Line Status Register}
+\newacronym{msr}{MSR}{Modem Status Register}
+\newacronym{fifo}{FIFO}{First In, First Out}
+\newacronym{sbi}{SBI}{Supervisor Binary Interface}
+
+%CH3
 \newacronym{cpu}{CPU}{Central Processing Unit}
 \newacronym{soc}{SoC}{System on a chip}
 \newacronym{plic}{PLIC}{Platform-Level Interrupt Controller}
