--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -11,7 +11,7 @@
 	title     = "IOb-SoC",
 	url       = "https://github.com/IObundle/iob-soc",
 	edition	  = "V0.6",
-    keywords  = "iob-soc,riscv"
+  keywords  = "iob-soc,riscv"
 }
 @book{thomas2008verilog,
   title={The Verilog{\textregistered} hardware description language},
@@ -28,10 +28,10 @@
   organization={IEEE}
 }
 @online{iob_lib,
-    author    = "IObundle Lda",
-    title     = "IOb-Lib",
-    url       = "https://github.com/IObundle/iob-lib",
-    keywords  = "iob-soc,iob-lib"
+  author    = "IObundle Lda",
+  title     = "IOb-Lib",
+  url       = "https://github.com/IObundle/iob-lib",
+  keywords  = "iob-soc,iob-lib"
 }
 @article{asanovic2014instruction,
   title   ="Instruction sets should be free: The case for risc-v",
@@ -297,42 +297,41 @@ keywords = {manycore, multicore, open-source},
 @online{riscv_platform_specification,
 	author    = "riscv",
 	title     = "RISC-V Platform Specification",
-    url       = "https://github.com/riscv/riscv-platform-specs/blob/main/riscv-platform-spec.pdf",
-    keywords  = "risc-v"
+  url       = "https://github.com/riscv/riscv-platform-specs/blob/main/riscv-platform-spec.pdf",
+  keywords  = "risc-v"
 }
 @article{gorban2002uart,
-  title={Uart ip core specification},
-  author={Gorban, Jacob},
-  journal={Architecture},
-  volume={15},
-  pages={1},
+  title={UART IP Core Specification},
+  publisher={FreeCores},
+  author={Jacob Gorban},
+  url={https://raw.githubusercontent.com/freecores/uart16550/master/doc/UART_spec.pdf}, 
   year={2002}
 }
 
 @online{lowrisc_plic,
 	author    = "lowRISC",
 	title     = "OpenTitan - PLIC",
-    url       = "https://github.com/lowRISC/opentitan/tree/master/hw/ip_templates/rv_plic",
-    keywords  = "lowrisc,plic"
+  url       = "https://github.com/lowRISC/opentitan/tree/master/hw/ip_templates/rv_plic",
+  keywords  = "lowrisc,plic"
 }
 @online{pulp_plic,
 	author    = "pulp-platform",
 	title     = "RISC-V Platform-Level Interrupt Controller",
-    url       = "https://github.com/pulp-platform/rv_plic/tree/master",
-    keywords  = "pulp,plic"
+  url       = "https://github.com/pulp-platform/rv_plic/tree/master",
+  keywords  = "pulp,plic"
 }
 @online{roalogic_plic,
 	author    = "RoaLogic",
 	title     = "AHB-Lite Platform-Level Interrupt Controller (PLIC)",
-    url       = "https://github.com/RoaLogic/plic",
-    keywords  = "roalogic,plic"
+  url       = "https://github.com/RoaLogic/plic",
+  keywords  = "roalogic,plic"
 }
 
 % CH4
 @online{bare_metal_int,
 	author    = "Five EmbedDev",
 	title     = "riscv-scratchpad - baremetal-startup-c",
-    url       = "https://github.com/five-embeddev/riscv-scratchpad/tree/master/baremetal-startup-c/src",
+  url       = "https://github.com/five-embeddev/riscv-scratchpad/tree/master/baremetal-startup-c/src",
 }
 
 @online{busybox,
