--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -89,6 +89,12 @@
   year={2012},
   publisher={ACM New York, NY, USA}
 }
+@online{clint_riscv_spec,
+  author    = "Andrew Waterman and Greg Favor and John Hauser and Anup Patel and Bin Meng and Wesley Norris",
+  title     = "RISC-V Advanced Core Local Interruptor Specification",
+  url       = "https://github.com/riscv/riscv-aclint/releases/download/v1.0-rc4/riscv-aclint-1.0-rc4.pdf",
+  keywords  = "risc-v,aclint"
+}
 
 
 %CH3
@@ -333,10 +339,16 @@ keywords = {manycore, multicore, open-source},
 	title     = "riscv-scratchpad - baremetal-startup-c",
   url       = "https://github.com/five-embeddev/riscv-scratchpad/tree/master/baremetal-startup-c/src",
 }
-
 @online{busybox,
 	author  = "Denys Vlasenko",
 	title   = "BusyBox",
 	url     = "https://git.busybox.net/busybox"
+}
+@inproceedings{petazzoni2012buildroot,
+  title={Buildroot: a nice, simple and efficient embedded Linux build system},
+  author={Petazzoni, Thomas and Electrons, Free},
+  booktitle={Embedded Linux System Conference},
+  volume={2012},
+  year={2012}
 }
 @Comment{jabref-meta: databaseType:biblatex;}
