--- a/settings/graphics.tex
+++ b/settings/graphics.tex
@@ -1,6 +1,6 @@
 % graphics
 \usepackage{graphicx}
-\graphicspath{ {images/} }
+\graphicspath{ {images} }
 \DeclareGraphicsExtensions{.pdf,.png,.jpg,.jpeg,.gif}
 
 % captions
