--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -95,7 +95,12 @@
   url       = "https://github.com/riscv/riscv-aclint/releases/download/v1.0-rc4/riscv-aclint-1.0-rc4.pdf",
   keywords  = "risc-v,aclint"
 }
-
+@misc{plic_riscv_spec,
+  title  = "RISC-V Platform-Level Interrupt Controller Specification",
+  author = "Abner Chang and Andrew Waterman and Robert Balas and Drew Barbier and Jeff Scheel and Jessica Clarke and Krste Asanovic and Palmer Dabbelt and Yan",
+  url    = "https://github.com/riscv/riscv-plic-spec/releases/download/1.0.0_rc4/riscv-plic-1.0.0_rc4.pdf",
+  year   = "2022"
+}
 
 %CH3
 @online{cortex_a72,
