--- a/thesis.tex
+++ b/thesis.tex
@@ -25,6 +25,7 @@
 % ---------------------------
 % |    Meta-Data for PDF    |
 % ---------------------------
+\usepackage[onehalfspacing]{setspace}
 \usepackage[
   pdftex,
   pdfauthor={Pedro Antunes},
