--- a/sources/acronyms.tex
+++ b/sources/acronyms.tex
@@ -12,6 +12,7 @@
 \newacronym{msr}{MSR}{Modem Status Register}
 \newacronym{fifo}{FIFO}{First In, First Out}
 \newacronym{sbi}{SBI}{Supervisor Binary Interface}
+\newacronym{see}{SEE}{Supervisor Execution Environment}
 
 %CH3
 \newacronym{cpu}{CPU}{Central Processing Unit}
