--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -101,6 +101,12 @@
   url    = "https://github.com/riscv/riscv-plic-spec/releases/download/1.0.0_rc4/riscv-plic-1.0.0_rc4.pdf",
   year   = "2022"
 }
+@misc{sbi_riscv_spec,
+  title  = "RISC-V Supervisor Binary Interface Specification",
+  author = "Palmer Dabbelt and Atish Patra",
+  url    = "https://github.com/riscv-non-isa/riscv-sbi-doc/releases/download/v1.0.0/riscv-sbi.pdf",
+  year   = "2022"
+}
 
 %CH3
 @online{cortex_a72,
