--- a/sources/acronyms.tex
+++ b/sources/acronyms.tex
@@ -13,6 +13,7 @@
 \newacronym{fifo}{FIFO}{First In, First Out}
 \newacronym{sbi}{SBI}{Supervisor Binary Interface}
 \newacronym{see}{SEE}{Supervisor Execution Environment}
+\newacronym{pci}{PCI}{Peripheral Component Interconnect}
 
 %CH3
 \newacronym{cpu}{CPU}{Central Processing Unit}
