--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -107,6 +107,12 @@
   url    = "https://github.com/riscv-non-isa/riscv-sbi-doc/releases/download/v1.0.0/riscv-sbi.pdf",
   year   = "2022"
 }
+@online{devicetree_spec,
+  author    = "devicetree-org",
+  title     = "Devicetree Specification",
+  url       = "https://github.com/devicetree-org/devicetree-specification/releases/download/v0.3/devicetree-specification-v0.3.pdf",
+  keywords  = "risc-v,aclint"
+}
 
 %CH3
 @online{cortex_a72,
