--- a/sources/acronyms.tex
+++ b/sources/acronyms.tex
@@ -14,6 +14,8 @@
 \newacronym{sbi}{SBI}{Supervisor Binary Interface}
 \newacronym{see}{SEE}{Supervisor Execution Environment}
 \newacronym{pci}{PCI}{Peripheral Component Interconnect}
+\newacronym{risc}{RISC}{Reduced Instruction Set Computer}
+\newacronym{cisc}{CISC}{Complex Instruction Set Computer}
 
 %CH3
 \newacronym{cpu}{CPU}{Central Processing Unit}
